--- a/Project/Machine_Learning_Project.ipynb
+++ b/Project/Machine_Learning_Project.ipynb
@@ -553,6 +553,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Missing Values"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -1974,6 +1981,20 @@
         "demo = outlier_detection(data.copy())\n",
         "demo.describe()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Aggregation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
