--- a/Project/Machine_Learning_Project.ipynb
+++ b/Project/Machine_Learning_Project.ipynb
@@ -4609,6 +4609,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = data_no_low_importance"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "LGVtUgp8TRID"
