modified:   Project/Machine_Learning_Project.ipynb 	modified:   "Project/\350\257\264\346\230\216.md"

--- a/Project/说明.md
+++ b/Project/说明.md
@@ -51,9 +51,55 @@ data['creatinine_high'] = data['crea'] > 2
 4. 特征选取
 
 对数据排除存在的三列target并归一化和编码以后，我们以death为目标预测列，保留与其强相关的特征。具体方法为结合两种feature selection方法：
-1. logistic regression+一范数，其中惩罚项常数为0.01，该方法提取19个特征列
+1. logistic regression+一范数，其中惩罚项常数的倒数C为0.01，该方法提取19个特征列
 2. gradient boosting预测并返回feature importance，其中每棵树最大深度为6，预测器设为100，该方法提取25个特征列
 
-通过合并二者，得到7012行\(\times\)36列。
+通过合并二者，得到7012行\(\times\)36列。其中dzclass并不在其中，但是我们将通过Data Visualization来说明加入dzclass的有效性。同时，注意到dzclass的feature importance与logistic regression的惩罚项相关，且惩罚程度若再调得更小一点(C=0.05)则dzclass被包含在内。
 
 5. 其它工作
+
+再进一步检查缺失值后，我们将剩余的类别变量进行编码，其中对于收入,sfdm2两个变量采用排序编码，其余采用独热编码，并删去原有数据列。通过该方法，得到90列。
+
+# Data Visualization
+
+我们研究数据点在特征空间内关于dzclass的分布情况。由图可知分布在二维上可以被清晰的划分，在三维视图上存在一定的可识别度。这说明该数据集关于该特征是可分的，且存在一定的线性可分性。同时，通过与death和hospdead在类似图形上的分布我们可以看到死亡情况与dzclass在一定程度上相关（同一个参数画的图，只是因为标签不同导致颜色不同，因而可比），如一些疾病类中死亡率更低。因而尽管feature selection没有包含该特征，我们也有充分的理由将其纳入最终的特征列。
+
+# Clustering Analysis
+
+我们探索各种方法对于聚类的可行性以及数据的处理问题，即：KMeans, DBSCAN，和GMM对于raw data和scaled data（standardize过后的结果）上的预处理能力。
+
+以下为最佳模型：
+
+（raw data）
+- KMeans with 5 clusters: Silhouette Score = 0.3660
+- KMeans with 5 clusters: Calinski-Harabasz Score = 4368.6178
+- KMeans with 5 clusters: Davies-Bouldin Score = 0.9249
+- KMeans with 5 clusters: Adjusted Rand Index = -0.0043
+- KMeans with 5 clusters: Normalized Mutual Information = 0.0111
+- DBSCAN with eps=60: Silhouette Score = 0.6813
+- DBSCAN with eps=60: Calinski-Harabasz Score = 581.2619
+- DBSCAN with eps=60: Davies-Bouldin Score = 2.4304
+- DBSCAN with eps=60: ARI = -0.0167
+- DBSCAN with eps=60: NMI = 0.0108
+- GMM with 2 clusters: Silhouette Score = 0.1505
+- GMM with 2 clusters: Calinski-Harabasz Score = 308.1016
+- GMM with 2 clusters: Davies-Bouldin Score = 3.8006
+- GMM with 2 clusters: ARI = -0.0237
+- GMM with 2 clusters: NMI = 0.0553
+
+（scaled data）
+- KMeans with 5 clusters: Silhouette Score = 0.1173
+- KMeans with 5 clusters: Calinski-Harabasz Score = 552.0029
+- KMeans with 5 clusters: Davies-Bouldin Score = 2.4960
+- KMeans with 5 clusters: Adjusted Rand Index = 0.0551
+- KMeans with 5 clusters: Normalized Mutual Information = 0.1221
+- DBSCAN with eps=12.4800: Silhouette Score = 0.3768
+- DBSCAN with eps=12.4800: Calinski-Harabasz Score = 103.7204
+- DBSCAN with eps=12.4800: Davies-Bouldin Score = 0.9305
+- DBSCAN with eps=12.4800: ARI = 0.0001
+- DBSCAN with eps=12.4800: NMI = 0.0000
+- GMM with 2 clusters: Silhouette Score = 0.0992
+- GMM with 2 clusters: Calinski-Harabasz Score = 692.1909
+- GMM with 2 clusters: Davies-Bouldin Score = 3.0637
+- GMM with 2 clusters: ARI = 0.0148
+- GMM with 2 clusters: NMI = 0.0066
