modified:   Project/Binary Classification with a Bank Dataset/workflow.ipynb

--- a/Project/Binary Classification with a Bank Dataset/workflow.ipynb
+++ b/Project/Binary Classification with a Bank Dataset/workflow.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a10426f6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dc60651a",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3a6a0491",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c105a033",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "75485a38",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "66730032",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "08b3de59",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "becabcc3",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "621e0316",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3f670786",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "2d6b2d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sample(n=7000, random_state=42).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "342c698d",
    "metadata": {},
    "outputs": [],
@@ -1319,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5873a720",
    "metadata": {},
    "outputs": [],
@@ -1349,82 +1359,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
+    "# import numpy as np\n",
+    "# import pandas as pd\n",
+    "# from sklearn.impute import SimpleImputer\n",
+    "# from sklearn.neighbors import NearestNeighbors\n",
     "\n",
-    "def knn_impute_df(df, k=5, n_neighbors_search=20, sample_for_neighbors=None, random_state=0):\n",
-    "    \"\"\"\n",
-    "    资源友好 KNN Imputer（只对数值列生效）\n",
-    "    - df: pandas DataFrame（原表）\n",
-    "    - k: 用于加权平均的邻居数\n",
-    "    - n_neighbors_search: 最近邻搜索时的邻居数（>= k）\n",
-    "    - sample_for_neighbors: 若为 int，则随机抽样该数量行建立邻居索引以节省内存/时间\n",
-    "    \"\"\"\n",
-    "    num_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "    if len(num_cols) == 0:\n",
-    "        return df.copy()\n",
+    "# def knn_impute_df(df, k=5, n_neighbors_search=20, sample_for_neighbors=None, random_state=0):\n",
+    "#     \"\"\"\n",
+    "#     资源友好 KNN Imputer（只对数值列生效）\n",
+    "#     - df: pandas DataFrame（原表）\n",
+    "#     - k: 用于加权平均的邻居数\n",
+    "#     - n_neighbors_search: 最近邻搜索时的邻居数（>= k）\n",
+    "#     - sample_for_neighbors: 若为 int，则随机抽样该数量行建立邻居索引以节省内存/时间\n",
+    "#     \"\"\"\n",
+    "#     num_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "#     if len(num_cols) == 0:\n",
+    "#         return df.copy()\n",
     "\n",
-    "    X_df = df[num_cols].astype(float).copy()\n",
-    "    X = X_df.to_numpy()\n",
-    "    mask = np.isnan(X)\n",
-    "    if not mask.any():\n",
-    "        return df.copy()\n",
+    "#     X_df = df[num_cols].astype(float).copy()\n",
+    "#     X = X_df.to_numpy()\n",
+    "#     mask = np.isnan(X)\n",
+    "#     if not mask.any():\n",
+    "#         return df.copy()\n",
     "\n",
-    "    # 临时均值填充用于构建邻居索引（避免带掩码的复杂距离计算）\n",
-    "    mean_imp = SimpleImputer(strategy='mean')\n",
-    "    X_fill = mean_imp.fit_transform(X)\n",
+    "#     # 临时均值填充用于构建邻居索引（避免带掩码的复杂距离计算）\n",
+    "#     mean_imp = SimpleImputer(strategy='mean')\n",
+    "#     X_fill = mean_imp.fit_transform(X)\n",
     "\n",
-    "    n_samples = X_fill.shape[0]\n",
-    "    # 确保搜索邻居数合法\n",
-    "    search_k = min(max(1, int(n_neighbors_search)), max(1, n_samples - 1))\n",
+    "#     n_samples = X_fill.shape[0]\n",
+    "#     # 确保搜索邻居数合法\n",
+    "#     search_k = min(max(1, int(n_neighbors_search)), max(1, n_samples - 1))\n",
     "\n",
-    "    # 构建邻居索引（可选子采样）\n",
-    "    if isinstance(sample_for_neighbors, int) and 0 < sample_for_neighbors < n_samples:\n",
-    "        rng = np.random.RandomState(random_state)\n",
-    "        idx_sample = rng.choice(n_samples, size=sample_for_neighbors, replace=False)\n",
-    "        nbrs = NearestNeighbors(n_neighbors=search_k, n_jobs=-1).fit(X_fill[idx_sample])\n",
-    "        distances_sub, indices_sub = nbrs.kneighbors(X_fill, return_distance=True)\n",
-    "        # 将子索引映射回原索引\n",
-    "        indices = idx_sample[indices_sub]\n",
-    "        distances = distances_sub\n",
-    "    else:\n",
-    "        nbrs = NearestNeighbors(n_neighbors=search_k, n_jobs=-1).fit(X_fill)\n",
-    "        distances, indices = nbrs.kneighbors(X_fill, return_distance=True)\n",
+    "#     # 构建邻居索引（可选子采样）\n",
+    "#     if isinstance(sample_for_neighbors, int) and 0 < sample_for_neighbors < n_samples:\n",
+    "#         rng = np.random.RandomState(random_state)\n",
+    "#         idx_sample = rng.choice(n_samples, size=sample_for_neighbors, replace=False)\n",
+    "#         nbrs = NearestNeighbors(n_neighbors=search_k, n_jobs=-1).fit(X_fill[idx_sample])\n",
+    "#         distances_sub, indices_sub = nbrs.kneighbors(X_fill, return_distance=True)\n",
+    "#         # 将子索引映射回原索引\n",
+    "#         indices = idx_sample[indices_sub]\n",
+    "#         distances = distances_sub\n",
+    "#     else:\n",
+    "#         nbrs = NearestNeighbors(n_neighbors=search_k, n_jobs=-1).fit(X_fill)\n",
+    "#         distances, indices = nbrs.kneighbors(X_fill, return_distance=True)\n",
     "\n",
-    "    X_imp = X.copy()\n",
-    "    # 按列填补缺失：使用邻居中实际有值的条目，按距离加权平均\n",
-    "    for j in range(X.shape[1]):\n",
-    "        missing_idx = np.where(mask[:, j])[0]\n",
-    "        if missing_idx.size == 0:\n",
-    "            continue\n",
-    "        col_vals = X[:, j]\n",
-    "        global_mean = np.nanmean(col_vals) if np.any(~np.isnan(col_vals)) else 0.0\n",
+    "#     X_imp = X.copy()\n",
+    "#     # 按列填补缺失：使用邻居中实际有值的条目，按距离加权平均\n",
+    "#     for j in range(X.shape[1]):\n",
+    "#         missing_idx = np.where(mask[:, j])[0]\n",
+    "#         if missing_idx.size == 0:\n",
+    "#             continue\n",
+    "#         col_vals = X[:, j]\n",
+    "#         global_mean = np.nanmean(col_vals) if np.any(~np.isnan(col_vals)) else 0.0\n",
     "\n",
-    "        for i in missing_idx:\n",
-    "            neigh_idx = indices[i]\n",
-    "            neigh_dists = distances[i]\n",
-    "            valid_mask = ~np.isnan(col_vals[neigh_idx])\n",
-    "            if not np.any(valid_mask):\n",
-    "                X_imp[i, j] = global_mean\n",
-    "                continue\n",
-    "            valid_idxs = neigh_idx[valid_mask]\n",
-    "            valid_dists = neigh_dists[valid_mask]\n",
-    "            take = min(k, len(valid_idxs))\n",
-    "            vals = col_vals[valid_idxs[:take]].astype(float)\n",
-    "            d = valid_dists[:take].astype(float)\n",
-    "            weights = 1.0 / (d + 1e-8)\n",
-    "            X_imp[i, j] = np.sum(vals * weights) / np.sum(weights)\n",
+    "#         for i in missing_idx:\n",
+    "#             neigh_idx = indices[i]\n",
+    "#             neigh_dists = distances[i]\n",
+    "#             valid_mask = ~np.isnan(col_vals[neigh_idx])\n",
+    "#             if not np.any(valid_mask):\n",
+    "#                 X_imp[i, j] = global_mean\n",
+    "#                 continue\n",
+    "#             valid_idxs = neigh_idx[valid_mask]\n",
+    "#             valid_dists = neigh_dists[valid_mask]\n",
+    "#             take = min(k, len(valid_idxs))\n",
+    "#             vals = col_vals[valid_idxs[:take]].astype(float)\n",
+    "#             d = valid_dists[:take].astype(float)\n",
+    "#             weights = 1.0 / (d + 1e-8)\n",
+    "#             X_imp[i, j] = np.sum(vals * weights) / np.sum(weights)\n",
     "\n",
-    "    result = df.copy()\n",
-    "    result[num_cols] = pd.DataFrame(X_imp, columns=num_cols, index=df.index)\n",
-    "    return result"
+    "#     result = df.copy()\n",
+    "#     result[num_cols] = pd.DataFrame(X_imp, columns=num_cols, index=df.index)\n",
+    "#     return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5d964ae5",
    "metadata": {},
    "outputs": [
