new file:   Project/Binary Classification with a Bank Dataset/main.py modified:   Project/Binary Classification with a Bank Dataset/workflow.ipynb

--- a/Project/Binary Classification with a Bank Dataset/workflow.ipynb
+++ b/Project/Binary Classification with a Bank Dataset/workflow.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "a10426f6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "dc60651a",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "max         1.000000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "3a6a0491",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "c105a033",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "75485a38",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "66730032",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "Name: pdays_contacted, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "08b3de59",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "becabcc3",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
        "[750000 rows x 34 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "621e0316",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "3f670786",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "[750000 rows x 34 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "2d6b2d53",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "5873a720",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1326,7 @@
        " np.int64(0))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "dd77ddfd",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
        "Name: education, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "bc30b02e",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "72abaa2b",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "30a5ff30",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b5c21157",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,13 @@
      "output_type": "stream",
      "text": [
       "n_estimators: 100, AUC: 0.7411664768352666\n",
-      "n_estimators: 200, AUC: 0.744250441702671\n",
+      "n_estimators: 200, AUC: 0.744250441702671\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "n_estimators: 500, AUC: 0.7494554277993768\n",
       "n_estimators: 1000, AUC: 0.7469505017275718\n"
      ]
@@ -1565,9 +1571,93 @@
     "\n",
     "for n_estimators in [100, 200, 500, 1000]:\n",
     "    model = RandomForestClassifier(n_estimators=n_estimators, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80836444",
+   "metadata": {},
+   "source": [
+    "#### Gaussian Mixture Model (n_components=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_components: 5, AUC: 0.5390373957252937\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_components: 7, AUC: 0.5713808484509122\n",
+      "n_components: 9, AUC: 0.4406485234510712\n",
+      "n_components: 11, AUC: 0.49563811984194145\n",
+      "n_components: 13, AUC: 0.4679354615660347\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
+    "for n_components in [5,7,9,11,13]:\n",
+    "    model = GaussianMixture(n_components=n_components, random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "    print(f\"n_estimators: {n_estimators}, AUC: {roc_auc_score(y_test, y_pred)}\")"
+    "    print(f\"n_components: {n_components}, AUC: {roc_auc_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0feb6506",
+   "metadata": {},
+   "source": [
+    "#### XgBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "87741e27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.799283519028742"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "xgb_train = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
+    "xgb_test = xgb.DMatrix(X_test, y_test, enable_categorical=True)\n",
+    "\n",
+    "params = {\n",
+    "    'objective': 'binary:logistic',\n",
+    "    'max_depth': 10,\n",
+    "    'learning_rate': 1,\n",
+    "    'seed': 42\n",
+    "}\n",
+    "n=1000\n",
+    "model = xgb.train(params=params,dtrain=xgb_train,num_boost_round=n)\n",
+    "\n",
+    "preds = model.predict(xgb_test)\n",
+    "preds = np.round(preds)\n",
+    "roc_auc_score(y_test,preds)"
    ]
   },
   {
